# random

./: .gitignore  WINDOWS.tar.xz  archive_12-05-2018_1803.tar.xz  blargh.tar.xz  check_includes.c  lazy.tar.xz  mergesort.tar.xz  moretemp.tar.xz  neotags.h  neotags.nvim.tar.xz  neotags_bin.7z  neotags_windows.7z  otherstuff.tar.xz  preproc-0.1.0.tar.xz  src.tar.xz  stuff.tar.xz  tags.tar.xz  xtar.jsh
Code/: .ycm_extra_conf.py  xtar3.1.xz
Code/C/: FUCK  blarg.c  bsd_string_functions.c  stuff  tst.c
Code/C/blah/: blargh.s  fuckme.asm  hash.c  notso.asm  why
Code/C/fool/: compile_commands.json  config.h.in~
Code/C/foreach/: foreach_hack.c
Code/C/preproc-0.1.0/: config.h.in~  configure.ac
Code/C/sort1/: Makefile.am  Makefile.in  sort
Code/C/sort1/autom4te.cache/: output.0  requests  traces.0
Code/C/sort1/src/: Makefile.in  options.c
Code/C/sort1/src/.deps/: options.Po  sort.Po
Code/C/sort1/src/unused/: queue.h
Code/C/tests/fag3/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
Code/C/tests/fag3/autom4te.cache/: output.1  requests  traces.0  traces.1
Code/C/tests/fag3/doc/: fag3.1  fag3.info  fag3.texi
Code/C/tests/fag3/scripts/: fag3.lsm  fag3.lsm.in  fag3.spec  fag3.spec.in
Code/C/tests/fag3/src/: Makefile  Makefile.am  Makefile.in  fag3  fag3.c
Code/C/tests/fag3/src/.deps/: fag3.Po
Code/go/: test.go
Code/perl/: GETOPT.pl  gpip.pl  mpip  my_gpip.pl  tst.html  xtar3.pl
Code/perl/OLDXTAR/: xtar.pm
Code/perl/Test/: prettifydu  test2.pl
Code/perl/old1/: clformat.pl  hello.pl  noform.pl
Code/perl/xtar/: Xtar-41.pl  xtar.pm
Code/python/xtar/: xtar.py  xtar_file.py  xtar_main.py
Code/shell/: myshittyfind.sh  tst.sh
code/: Makefile
code/C/: CrapMakefile  neotags.h
code/C/crap/: compile_commands.json  config.h.in~  configure.ac
code/C/crap/src/: Makefile.am  quicksort.c  utility.c
code/C/fool/: configure.ac
code/C/fool/garbage/: calculator.c  mystrlib2.c  new.py  quicksort.c
code/C/fool/src/: BSDmakefile  Makefile.am  calcop.c  options.c  utility.c
code/C/fool/txt/: input.txt
code/C/preproc-0.1.0/: Makefile.am  configure.ac
code/C/preproc-0.1.0/src/: main.c  preproc.h  util.c  utility.c
code/Python/: tst.py
code/awk/: tst.awk
code/go/: BSDmakefile  arse  test.go
code/perl/: blargh.pl  gpip.pl  mime.pl  mpip.pl  mpip.plc
code/perl/Test/mergesort_2/: Makefile  Makefile.am  compile_commands.json  configure.ac
code/perl/Test/mergesort_2/src/: Makefile  final.c  invertions.c  mergesort.c  mergesort.h  options.c  quicksort.c  utility.c
code/shell/: deldups.sh  find.sh  fuckme.sh  reg.sh
misc/: OPTIONS.c  WindowsRegedit.tar.xz  clint4.py  misc.tar.xz
misc/Templates/: Makefile  PY_C_CMD
misc/whatever/: myStrLib.c  setupAll.c
moretemp/C/: CMakeLists.txt
moretemp/cppbin/: CMakeLists.txt
moretemp/go/: __home__bml__moretemp__go.tags  strip.c  why.go
moretemp/goscratch/: main.go
school/ASSIGNMENT-01/: assignment1pt1.py  assignment1pt2.py  books.txt  members.txt  secret.txt  summary.txt
school/ASSIGNMENT-02/: ASS.py  bast.py  fuck.py  game.py  game_orig.py  tests.py  tests2.py
school/ASSIGNMENT-03/: assignment3.py  bad_deck1  bad_deck2  bad_deck3  bad_deck4  cheater.py  do_shuffle_deck.py  perl.pl  queue.pl  shuffledDeck.txt  try2.py  try3.py  try4.py
school/ASSIGNMENT-03/war/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  compile_commands.json  config.h.in~  configure  configure.ac  war
school/ASSIGNMENT-03/war/autom4te.cache/: output.0  requests  traces.0  traces.1
school/ASSIGNMENT-03/war/doc/: war.1  war.info  war.texi
school/ASSIGNMENT-03/war/scripts/: war.lsm.in  war.spec.in
school/ASSIGNMENT-03/war/src/: Makefile.am  Makefile.in  mystrlib2.c  options.c  queue.c  utility.c  validate.c  war.c  war.h
school/ASSIGNMENT-04/: algorithm  assignment4.py  blargh.py  butt.py  cheap.py  memusg.sh  py.py  test.c  upd.py
school/ASSIGNMENT-04/arse/: Makefile.am  compile_commands.json  config.h.in  config.h.in~  configure.ac
school/ASSIGNMENT-04/arse/src/: arse.h  display.cpp  game.cpp  impl.cpp  main.cpp  options.cpp  quicksort.cpp  utility.c  utility.cpp
school/ASSIGNMENT-04/cheap2/: compile_commands.json  config.h.in  configure.ac
school/ASSIGNMENT-04/cheap2/src/: Makefile.am  display.c  game.c  impl.c  iter.c  main.c  tree.c  tree.h
school/ASSIGNMENT-04/tree/: .ycm_extra_conf.py  Makefile.am  Makefile.in  compile_commands.json  configure  configure.ac
school/ASSIGNMENT-04/tree-cmake/: CMakeLists.txt
school/ASSIGNMENT-04/tree-cmake/src/: CMakeLists.txt  display.c  game.c  mergesort.h  options.c  tree.h
school/ASSIGNMENT-04/tree/src/: Makefile.am  Makefile.in  foreach_hack.h  game.c  impl.c  main.c  quicksort.c  tree.h  utility.c
school/LAB/Lab04/WAT/AUTO/src/: Makefile.am  Makefile.in  main.c
school/LAB/Lab04/WAT/AUTO2/src/: Makefile.am  mystrlib2_pt1.c
school/LAB/Lab09/sort/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac
school/LAB/Lab09/sort/autom4te.cache/: requests  traces.0  traces.1
school/LAB/Lab09/sort/src/: Makefile  Makefile.am  Makefile.in  options.c  sort  sort.c  utility.c
school/LAB/Lab09/sort/src/.deps/: queue.Po  sort-bubble.Po  sort-methods.Po  sort-options.Po  sort-queue.Po  sort-sort.Po  sort-utility.Po  utility.Po
school/LAB/Lab09/students/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  students
school/LAB/Lab09/students/autom4te.cache/: output.0  requests  traces.0
school/LAB/Lab09/students/src/: Makefile.am  Makefile.in  a.out  options.c  sortstudents.c  stack  students.c  students.h  test.c  utility.c
school/LAB/Lab10/mergesort_2/: algorithm.py  compile_commands.json  config.h.in  config.h.in~  configure  configure.ac
school/LAB/Lab10/mergesort_2/src/: Makefile.am  Makefile.in  colorful.c  datagen.c  final.c  impl.c  invertions.c  mergesort.c  mergesort.h  oldmethods.c  options.c  quicksort.c  utility.c
school/PHIL/: .~lock.d1.odt#  d1.odt  fuck.md  vibreoffice.cfg
src/perl/: next.pl
(+448 files in other folders)
