#SUBDIRS = src src/third_party
SUBDIRS = src

# EXTRA_DIST=tree.lsm.in tree.spec.in tree.texi

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
# info_TEXINFOS = doc/tree.texi
# tree_TEXINFOS = doc/gpl.texi

#  install the man pages
# man_MANS=doc/tree.1
