#SUBDIRS = src src/third_party
SUBDIRS = src

EXTRA_DIST=fag3.lsm.in fag3.spec.in fag3.texi

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
info_TEXINFOS = doc/fag3.texi
fag3_TEXINFOS = doc/gpl.texi

#  install the man pages
man_MANS=doc/fag3.1
