bin_PROGRAMS=war
# war_SOURCES=war.c third_party/xmalloc.c third_party/getopt.c third_party/getopt1.c third_party/include/system.h third_party/include/getopt.h third_party/include/xmalloc.h war.1 aclocal.m4
# broken # war_SOURCES=war.c third_party/libtp.a third_party/include/system.h third_party/include/getopt.h third_party/include/xmalloc.h fag.1 aclocal.m4
war_SOURCES=war.c options.c validate.c\
		war.h \
		mystrlib2.c mystrlib2.h \
		third_party/include/system.h war.1 aclocal.m4

#  uncomment the following if war requires the math library
#war_LDADD=-lm
