#SUBDIRS = src src/third_party
SUBDIRS = src

# EXTRA_DIST=students.lsm.in students.spec.in students.texi

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
# info_TEXINFOS = doc/students.texi
# students_TEXINFOS = doc/gpl.texi

#  install the man pages
# man_MANS=doc/students.1
