bin_PROGRAMS=fag3
# fag3_SOURCES=fag3.c third_party/xmalloc.c third_party/getopt.c third_party/getopt1.c third_party/include/system.h third_party/include/getopt.h third_party/include/xmalloc.h fag3.1 aclocal.m4
# broken # fag3_SOURCES=fag3.c third_party/libtp.a third_party/include/system.h third_party/include/getopt.h third_party/include/xmalloc.h fag.1 aclocal.m4
fag3_SOURCES=fag3.c third_party/include/system.h fag3.1 aclocal.m4

#  uncomment the following if fag3 requires the math library
#fag3_LDADD=-lm
