# what flags you want to pass to the C compiler & linker
AM_CFLAGS = --pedantic -Wall -Og
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = $(top_builddir)/solver
__top_builddir__solver_SOURCES = main.c mystrlib2_pt1.c mystrlib2_pt2.c mystrlib2_pt3.c mystrlib2.h 
